@@ -12,6 +12,9 @@ What's New in Python 2.3 beta 2?
 Core and builtins
 -----------------
 
+- The encoding attribute has been added for file objects, and set to
+  the terminal encoding on Unix and Windows.
+
 - The softspace attribute of file objects became read-only by oversight.
   It's writable again.
 
